--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,6 @@ logging:
       springframework:
         data:
           r2dbc: DEBUG
+
+- name: Snyk CLI Action
+  uses: clarkio/snyk-cli-action@1.0.0
